okidoc - update doc build task

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "documentation": "okidoc ./docs/docs.yml ./docs",
     "documentation:gitadd": "npm run documentation && git add ./docs",
     "documentation:site": "okidoc-site develop ./docs/site.yml",
-    "documentation:site:build": "okidoc-site build ./docs/site.yml",
+    "documentation:site:build": "npm run documentation && okidoc-site build ./docs/site.yml",
     "documentation:site:deploy": "npm run documentation:site:build && gh-pages -d sitedist",
     "release": "haste release",
     "tslint": "ts-node node_modules/.bin/tslint -p . -c tslint.json",
