--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@babel/types": "7.0.0-beta.34",
     "@types/chai": "^4.0.8",
     "@types/mocha": "^2.2.44",
+    "@wix/okidoc": "^1.0.4",
     "babylon": "7.0.0-beta.34",
     "chai": "~3.5.0",
     "csscomb": "^4.2.0",
@@ -73,7 +74,6 @@
     "husky": "^0.13.1",
     "jsdom-global": "^2.1.1",
     "lint-staged": "^5.0.0",
-    "okidoc": "git+ssh://git@github.com/wix-private/okidoc.git#cli",
     "prettier": "^1.9.0",
     "sinon": "^2.3.8",
     "tslint": "^5.8.0",
