[VP-145] rename `VideoPlayer` => `Playable`, `video-player.js` => `playable`

--- a/docs/site.yml
+++ b/docs/site.yml
@@ -4,10 +4,10 @@ distPath: ./sitedist
 # https://www.gatsbyjs.org/docs/gatsby-config
 config:
   siteMetadata:
-    title: video-player.js
-  pathPrefix: /video-player.js
+    title: playable
+  pathPrefix: /playable
   algoliaApiKey: 8b7e07f448cec6e39fa301bf82ac83d6
-  githubLink: https://github.com/wix-private/video-player.js
+  githubLink: https://github.com/wix/playable
 
 navigation:
   - path: /player-config
