Adding documentation for theme system

--- a/docs/site.yml
+++ b/docs/site.yml
@@ -13,6 +13,8 @@ config:
 navigation:
   - path: /player-config
     title: Configuration
+  - path: /themes
+    title: Themes
   - path: /video-source
     title: Video source
   - path: /api
