--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "noImplicitAny": false,
     "noUnusedParameters": true,
     "noUnusedLocals": true,
+    "esModuleInterop": true,
     "target": "es5",
     "lib": ["dom", "es2016", "es2017"],
     "types": ["mocha", "chai", "node"]
