--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "noUnusedParameters": true,
     "noUnusedLocals": true,
     "esModuleInterop": true,
+    "importHelpers": true,
     "target": "es5",
     "lib": ["dom", "es2016", "es2017"],
     "types": ["mocha", "chai", "node"]
