[docs] use `entry` prop instead of `glob` for documentation source (okidoc@1.1.0)

--- a/docs/docs.yml
+++ b/docs/docs.yml
@@ -1,4 +1,4 @@
 - path: player-public-methods.md
   title: Player public methods
-  glob: src/default-modules/**/*.ts
+  entry: src/default-modules/index.ts
   visitor: scripts/documentation/playerApiVisitor.js
