--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build": "haste build",
     "build:production": "NODE_ENV=production haste build",
     "test": "npm run test:unit",
-    "documentation": "okidoc ./docs/docs.yml ./docs",
+    "documentation": "okidoc-md ./docs/docs.yml ./docs",
     "documentation:gitadd": "npm run documentation && git add ./docs",
     "documentation:site": "okidoc-site develop ./docs/site.yml",
     "documentation:site:build": "npm run documentation && okidoc-site build ./docs/site.yml",
@@ -68,7 +68,8 @@
     "husky": "^0.13.1",
     "jsdom-global": "^2.1.1",
     "lint-staged": "^5.0.0",
-    "okidoc": "^1.1.0",
+    "okidoc-md": "^1.2.3",
+    "okidoc-site": "^1.2.3",
     "prettier": "^1.9.0",
     "sinon": "^2.3.8",
     "tslint": "^5.8.0",
