--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,15 @@ if: tag IS blank
 
 language: node_js
 
+# https://docs.travis-ci.com/user/chrome
+addons:
+  chrome: stable
+
 script:
   - npm run lint
-  - npm run test
   - npm run build
+  - npm run test:unit
+  - npm run test:playback
 
 notifications:
   slack:
