--- a/package.json
+++ b/package.json
@@ -46,10 +46,10 @@
   },
   "dependencies": {
     "classnames": "^2.2.5",
-    "css-element-queries": "^1.0.1",
     "dashjs": "^2.6.6",
     "eventemitter3": "^2.0.3",
     "hls.js": "^0.8.9",
+    "resize-observer-polyfill": "^1.5.0",
     "tslib": "^1.9.0"
   },
   "devDependencies": {
