--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "src"
   ],
   "scripts": {
-    "start": "PORT=5000 haste start --entry-point=./dev-env/start-dev-env.js",
+    "start": "haste-playable start",
     "lint": "npm run tslint:all",
-    "build": "haste build",
-    "build:production": "NODE_ENV=production haste build",
+    "bundle:playable": "haste-playable bundle playable=./index.ts --rollup",
+    "bundle:playable-with-adapters": "haste-playable bundle playable-dash=./with-dash.ts playable-hls=./with-hls.ts --webpack",
+    "bundle:playback-test": "haste-playable bundle playable-test=./e2e/playback-test.ts --webpack --mode development",
+    "bundle:playback-test-rollup": "haste-playable bundle playable-test-rollup=./e2e/playback-test-rollup.ts --rollup --mode development",
+    "build": "haste-playable clean && haste-playable build && npm run bundle:playable && npm run bundle:playable-with-adapters",
     "test": "npm run test:unit",
     "documentation": "okidoc-md ./docs/docs.yml ./docs",
     "documentation:gitadd": "npm run documentation && git add ./docs",
@@ -29,9 +32,10 @@
     "prettier": "prettier --config .prettierrc --write",
     "prettier:all": "npm run prettier -- '{src,scripts,tslint-rules}/**/*.{js,ts}'",
     "csscomb:all": "csscomb src/.",
-    "test:playback": "node ./dev-env/start-karma.js",
-    "test:unit": "haste test --mocha",
-    "precommit": "lint-staged && npm run build && npm run test:unit && npm run test:playback && npm run documentation:gitadd"
+    "test:unit": "haste-playable test --mocha",
+    "pretest:playback": "haste-playable clean && npm run bundle:playback-test && npm run bundle:playback-test-rollup",
+    "test:playback": "haste-playable test --karma dev-env/karma-webpack.conf.js && haste-playable test --karma dev-env/karma-rollup.conf.js",
+    "precommit": "lint-staged && npm run test:unit && npm run test:playback && npm run documentation:gitadd"
   },
   "lint-staged": {
     "*.ts": [
@@ -48,6 +52,7 @@
     "classnames": "^2.2.5",
     "dashjs": "^2.6.6",
     "eventemitter3": "^2.0.3",
+    "haste-preset-playable": "github:bodia-uz/haste-preset-playable#v2.0.0",
     "hls.js": "^0.8.9",
     "resize-observer-polyfill": "^1.5.0",
     "tslib": "^1.9.0"
@@ -56,6 +61,7 @@
     "@babel/types": "7.0.0-beta.38",
     "@types/chai": "^4.0.8",
     "@types/mocha": "^2.2.44",
+    "@types/node": "^9.6.1",
     "babylon": "7.0.0-beta.34",
     "chai": "~3.5.0",
     "csscomb": "^4.2.0",
@@ -64,9 +70,11 @@
     "express": "^4.14.0",
     "gh-pages": "^1.1.0",
     "glob": "^7.1.2",
-    "haste-preset-playable": "github:bodia-uz/haste-preset-playable#v1.0.5",
     "husky": "^0.13.1",
+    "jsdom": "^9.12.0",
     "jsdom-global": "^2.1.1",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-mocha": "^1.3.0",
     "lint-staged": "^5.0.0",
     "okidoc-md": "^1.3.0",
     "okidoc-site": "^1.3.0",
@@ -74,22 +82,16 @@
     "sinon": "^2.3.8",
     "tslint": "^5.8.0",
     "tslint-eslint-rules": "^4.1.1",
-    "typescript": "^2.7.0"
+    "typescript": "^2.8.1"
   },
   "haste": {
-    "preset": "playable"
-  },
-  "yoshi": {
-    "separateCss": false,
-    "optimizeMoment": true,
-    "exports": "Playable",
-    "entry": {
-      "playable": "./index.ts",
-      "playable-test": "./e2e/playback-test.ts",
-      "playable-test-rollup": "./e2e/playback-test-rollup.ts",
-      "playable-develop": "./develop.ts",
-      "playable-dash": "./with-dash.ts",
-      "playable-hls": "./with-hls.ts"
+    "preset": "playable",
+    "presetConfig": {
+      "exports": "Playable",
+      "devServer": {
+        "entry": "./develop.ts",
+        "port": 5000
+      }
     }
   },
   "keywords": [
