--- a/package.json
+++ b/package.json
@@ -74,8 +74,8 @@
     "karma-chrome-launcher": "^2.2.0",
     "karma-mocha": "^1.3.0",
     "lint-staged": "^7.0.3",
-    "okidoc-md": "~1.4.2",
-    "okidoc-site": "~1.4.2",
+    "okidoc-md": "1.5.0",
+    "okidoc-site": "1.5.0",
     "prettier": "^1.9.0",
     "sinon": "^2.3.8",
     "tslint": "^5.8.0",
