--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "documentation:site": "okidoc-site develop ./docs/site.yml",
     "documentation:site:build": "npm run documentation && okidoc-site build ./docs/site.yml",
     "documentation:site:deploy": "npm run documentation:site:build && gh-pages -d sitedist",
-    "version": "node scripts/npm-version.js",
+    "version": "node scripts/npm-version.js && conventional-changelog -p angular",
     "postversion": "git push && git push --tags",
     "release": "node scripts/npm-release.js",
     "tslint": "ts-node node_modules/.bin/tslint -p . -c tslint.json",
@@ -53,6 +53,7 @@
   },
   "dependencies": {
     "classnames": "^2.2.5",
+    "conventional-changelog-cli": "^1.3.22",
     "dashjs": "^2.6.6",
     "eventemitter3": "^3.0.1",
     "hls.js": "^0.9.1",
