--- a/package.json
+++ b/package.json
@@ -73,6 +73,8 @@
     "jsdom-global": "^2.1.1",
     "karma-chrome-launcher": "^2.2.0",
     "karma-mocha": "^1.3.0",
+    "karma-safari-launcher": "^1.0.0",
+    "karma-sauce-launcher": "^1.2.0",
     "lint-staged": "^7.0.3",
     "okidoc-md": "1.5.0",
     "okidoc-site": "1.5.0",
