docs: add documentation for Playable texts/localization config

--- a/docs/site.yml
+++ b/docs/site.yml
@@ -32,3 +32,5 @@ navigation:
     title: Player events
   - path: /adapters
     title: Playback adapters
+  - path: /localization
+    title: Localization
