docs: rename `localization.md` to `player-texts.md`.
- rename title "Player localization" to "Player texts"
- add localization notes
- add texts legend for Playable texts config

--- a/docs/site.yml
+++ b/docs/site.yml
@@ -30,7 +30,7 @@ navigation:
     title: Modules
   - path: /events
     title: Player events
+  - path: /player-texts
+    title: Player texts
   - path: /adapters
     title: Playback adapters
-  - path: /localization
-    title: Localization
