--- a/package.json
+++ b/package.json
@@ -56,8 +56,7 @@
     "test:unit": "haste-playable test --mocha",
     "pretest:playback": "haste-playable clean && npm run bundle:playback-test && npm run bundle:playback-test-with-adapters",
     "test:playback": "haste-playable test --karma dev-env/karma.conf.js && haste-playable test --karma dev-env/karma-with-adapters.conf.js",
-    "precommit": "lint-staged && npm run test:unit && npm run test:playback && npm run documentation:gitadd",
-    "customPublish": "echo 'temporary fix for npm publish'"
+    "precommit": "lint-staged && npm run test:unit && npm run test:playback && npm run documentation:gitadd"
   },
   "dependencies": {
     "classnames": "^2.2.5",
