--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "lint": "npm run tslint:all",
     "bundle:playable": "haste-playable bundle playable=./index.ts",
     "bundle:playable-with-adapters": "haste-playable bundle playable-dash=./with-dash.ts playable-hls=./with-hls.ts --webpack",
+    "bundle:test": "haste-playable bundle test=./e2e/index.ts --webpack --mode development",
     "bundle:playback-test": "haste-playable bundle playable-test=./e2e/playback-test.ts --mode development",
     "bundle:playback-test-with-adapters": "haste-playable bundle playable-test-with-adapters=./e2e/playback-test-with-adapters.ts --webpack --mode development",
     "build": "haste-playable clean && haste-playable build && npm run bundle:playable && npm run bundle:playable-with-adapters",
@@ -56,7 +57,7 @@
     "test:unit": "haste-playable test --mocha",
     "pretest:playback": "haste-playable clean && npm run bundle:playback-test && npm run bundle:playback-test-with-adapters",
     "test:playback": "haste-playable test --karma dev-env/karma.conf.js && haste-playable test --karma dev-env/karma-with-adapters.conf.js",
-    "precommit": "lint-staged && npm run test:unit && npm run test:playback && npm run documentation:gitadd"
+   "precommit": "lint-staged && npm run test:unit && npm run test:playback && npm run documentation:gitadd"
   },
   "dependencies": {
     "classnames": "^2.2.5",
@@ -69,9 +70,11 @@
   "devDependencies": {
     "@babel/types": "7.0.0-beta.46",
     "@types/chai": "^4.0.8",
+    "@types/chance": "^1.0.1",
     "@types/mocha": "^5.2.0",
     "@types/node": "^10.0.2",
     "chai": "~4.1.2",
+    "chance": "^1.0.16",
     "conventional-changelog-cli": "^1.3.22",
     "csscomb": "^4.2.0",
     "gh-pages": "^1.1.0",
@@ -80,6 +83,7 @@
     "jsdom": "^9.12.0",
     "jsdom-global": "^2.1.1",
     "karma-chrome-launcher": "^2.2.0",
+    "karma-ios-simulator-launcher": "0.0.4",
     "karma-mocha": "^1.3.0",
     "karma-safari-launcher": "^1.0.0",
     "karma-sauce-launcher": "^1.2.0",
