--- a/package.json
+++ b/package.json
@@ -71,11 +71,12 @@
     "@babel/types": "7.0.0-beta.46",
     "@types/chai": "^4.1.4",
     "@types/chance": "^1.0.1",
+    "@types/hls.js": "^0.10.1",
     "@types/mocha": "^5.2.5",
-    "@types/node": "^10.5.7",
+    "@types/node": "^10.9.3",
     "chai": "~4.1.2",
     "chance": "^1.0.16",
-    "conventional-changelog-cli": "^2.0.1",
+    "conventional-changelog-cli": "^2.0.5",
     "csscomb": "^4.2.0",
     "gh-pages": "^1.2.0",
     "haste-preset-playable": "github:bodia-uz/haste-preset-playable#v2.2.1",
@@ -87,13 +88,13 @@
     "karma-mocha": "^1.3.0",
     "karma-safari-launcher": "^1.0.0",
     "karma-sauce-launcher": "^1.2.0",
-    "lint-staged": "^7.2.0",
+    "lint-staged": "^7.2.2",
     "okidoc-md": "^2.0.0-beta.4",
     "okidoc-site": "^2.0.0-beta.4",
     "prettier": "^1.14.2",
     "sinon": "^6.1.5",
     "tslint": "^5.11.0",
-    "tslint-eslint-rules": "^5.3.1",
+    "tslint-eslint-rules": "^5.4.0",
     "typescript": "^3.0.1"
   },
   "publishConfig": {
