--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,8 +10,7 @@
     "esModuleInterop": true,
     "importHelpers": true,
     "target": "es5",
-    "lib": ["dom", "es2016", "es2017"],
-    "types": ["mocha", "chai", "node"]
+    "lib": ["dom", "es2016", "es2017"]
   },
   "include": [
     "./src/**/*.ts"
