chore: temporary removing okidoc-site dependency

--- a/package.json
+++ b/package.json
@@ -44,8 +44,8 @@
     "test": "npm run test:unit",
     "documentation": "okidoc-md ./docs/docs.yml ./docs",
     "documentation:gitadd": "npm run documentation && git add ./docs",
-    "documentation:site": "okidoc-site develop ./docs/site.yml",
-    "documentation:site:build": "npm run documentation && okidoc-site build ./docs/site.yml",
+    "documentation:site": "",
+    "documentation:site:build": "npm run documentation",
     "documentation:site:deploy": "npm run documentation:site:build && gh-pages -d sitedist",
     "version": "node scripts/npm-version.js && conventional-changelog -p angular",
     "postversion": "git push && git push --tags",
@@ -92,7 +92,6 @@
     "karma-sauce-launcher": "^1.2.0",
     "lint-staged": "^7.3.0",
     "okidoc-md": "^2.0.0-beta.4",
-    "okidoc-site": "^2.0.0-beta.4",
     "prettier": "^1.14.3",
     "sinon": "^6.3.4",
     "tslint": "^5.11.0",
