--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "@babel/types": "7.0.0-beta.46",
     "@types/chai": "^4.1.7",
     "@types/chance": "^1.0.1",
+    "@types/classnames": "^2.2.7",
     "@types/hls.js": "^0.10.2",
     "@types/mocha": "^5.2.5",
     "@types/node": "^10.12.3",
