--- a/package.json
+++ b/package.json
@@ -74,6 +74,8 @@
     "@babel/types": "7.0.0-beta.46",
     "@types/chai": "^4.1.7",
     "@types/chance": "^1.0.1",
+    "@types/chrome": "0.0.81",
+    "@types/chromecast-caf-sender": "^1.0.1",
     "@types/classnames": "^2.2.7",
     "@types/hls.js": "^0.10.2",
     "@types/mocha": "^5.2.5",
