chore: update documentation

--- a/docs/docs.yml
+++ b/docs/docs.yml
@@ -1,4 +1,5 @@
 - path: player-public-methods.md
   title: Player public methods
   entry: src/core/default-modules.ts
+  glob: src/**/*.ts
   visitor: scripts/documentation/playerApiVisitor.js
