--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "esModuleInterop": true,
     "importHelpers": true,
     "target": "es5",
+    "jsx": "react",
     "lib": ["dom", "es2016", "es2017"]
   },
   "include": ["./src/**/*.ts"]
