Add storybook page to site docs

--- a/docs/site.yml
+++ b/docs/site.yml
@@ -34,3 +34,5 @@ navigation:
     title: Custom texts
   - path: /adapters
     title: Playback adapters
+  - path: /storybook
+    title: Storybook
