--- a/package.json
+++ b/package.json
@@ -95,8 +95,8 @@
     "karma-safari-launcher": "^1.0.0",
     "karma-sauce-launcher": "^1.2.0",
     "lint-staged": "^7.3.0",
-    "okidoc-md": "^2.0.0-beta.9",
-    "okidoc-site": "^2.0.0-beta.10",
+    "okidoc-md": "^2.0.0",
+    "okidoc-site": "^2.0.0",
     "prettier": "^1.15.1",
     "sinon": "^6.3.5",
     "tslint": "^5.11.0",
