Revert "chore(storybook): move storybook to html instead of react"
This reverts commit ab2f157ed19597349788895d1aa39e617a00bc4a.

--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "@storybook/addon-viewport": "^5.2.1",
     "@storybook/addons": "^5.2.1",
     "@storybook/html": "^5.2.1",
+    "@storybook/react": "^5.2.1",
     "@storybook/theming": "latest",
     "@types/chai": "^4.1.7",
     "@types/chance": "^1.0.1",
@@ -110,6 +111,8 @@
     "okidoc-md": "^2.0.0",
     "okidoc-site": "^2.0.0",
     "prettier": "^1.15.1",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
     "rgb-hex": "^3.0.0",
     "sinon": "^6.3.5",
     "tslint": "^5.11.0",
