feat: setup visual tests

--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "pretest:node": "haste-playable clean && npm run bundle:playable",
     "test:node": "node src/e2e/node.js",
     "test:unit": "jest -c=dev-env/tests/jest/configs/unit.config.js",
+    "test:visual": "jest",
     "pretest:playback": "haste-playable clean && npm run bundle:playback-test && npm run bundle:playback-test-with-adapters",
     "test:playback": "haste-playable test --karma dev-env/tests/karma/karma.conf.js && haste-playable test --karma dev-env/karma-with-adapters.conf.js",
     "precommit": "lint-staged && npm run documentation:gitadd",
@@ -88,6 +89,7 @@
     "@types/jest": "^24.0.24",
     "@types/mocha": "^5.2.5",
     "@types/node": "^10.12.3",
+    "@types/puppeteer": "^2.0.0",
     "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.0.6",
     "chai": "~4.1.2",
@@ -99,6 +101,7 @@
     "husky": "^0.14.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.9.0",
+    "jest-puppeteer": "^4.3.0",
     "jsdom": "^11.12.0",
     "jsdom-global": "^3.0.2",
     "karma-chrome-launcher": "^2.2.0",
@@ -110,6 +113,7 @@
     "okidoc-md": "^2.0.0",
     "okidoc-site": "^2.0.0",
     "prettier": "^1.15.1",
+    "puppeteer": "^2.0.0",
     "rgb-hex": "^3.0.0",
     "ts-jest": "^24.2.0",
     "tslint": "^5.11.0",
