--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "types": "dist/src/index.d.ts",
   "scripts": {
     "start": "haste-playable start",
+    "start:test": "haste-playable start entry=./test.ts",
     "lint": "npm run tslint:all",
     "bundle:playable": "haste-playable bundle playable=./index.ts",
     "bundle:playable-with-adapters": "haste-playable bundle playable-dash=./with-dash.ts playable-hls=./with-hls.ts --webpack",
@@ -87,6 +88,7 @@
     "@types/classnames": "^2.2.7",
     "@types/hls.js": "^0.10.2",
     "@types/jest": "^24.0.24",
+    "@types/jest-image-snapshot": "^2.11.0",
     "@types/mocha": "^5.2.5",
     "@types/node": "^10.12.3",
     "@types/puppeteer": "^2.0.0",
@@ -101,6 +103,7 @@
     "husky": "^0.14.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.9.0",
+    "jest-image-snapshot": "^2.11.1",
     "jest-puppeteer": "^4.3.0",
     "jsdom": "^11.12.0",
     "jsdom-global": "^3.0.2",
