--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "csscomb:all": "csscomb src/.",
     "pretest:node": "haste-playable clean && npm run bundle:playable",
     "test:node": "node src/e2e/node.js",
-    "test:unit": "haste-playable test --mocha",
+    "test:unit": "jest",
     "pretest:playback": "haste-playable clean && npm run bundle:playback-test && npm run bundle:playback-test-with-adapters",
     "test:playback": "haste-playable test --karma dev-env/karma.conf.js && haste-playable test --karma dev-env/karma-with-adapters.conf.js",
     "precommit": "lint-staged && npm run documentation:gitadd",
@@ -80,7 +80,6 @@
     "@storybook/addons": "^5.2.1",
     "@storybook/html": "^5.2.1",
     "@storybook/theming": "latest",
-    "@types/chai": "^4.1.7",
     "@types/chance": "^1.0.1",
     "@types/chrome": "0.0.81",
     "@types/chromecast-caf-sender": "^1.0.1",
@@ -98,6 +97,7 @@
     "gh-pages": "^1.2.0",
     "haste-preset-playable": "github:bodia-uz/haste-preset-playable#v2.2.2",
     "husky": "^0.14.3",
+    "jest": "^24.9.0",
     "jsdom": "^11.12.0",
     "jsdom-global": "^3.0.2",
     "karma-chrome-launcher": "^2.2.0",
