--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,16 @@
     "importHelpers": true,
     "target": "es5",
     "jsx": "react",
-    "lib": ["dom", "es2016", "es2017"]
+    "lib": ["dom", "es2016", "es2017"],
+    "types": [
+      "chance",
+      "chrome",
+      "chromecast-caf-sender",
+      "classnames",
+      "hls.js",
+      "jest",
+      "node"
+    ]
   },
   "include": ["./src/**/*.ts"]
 }
