--- a/package.json
+++ b/package.json
@@ -56,9 +56,9 @@
     "csscomb:all": "csscomb src/.",
     "pretest:node": "haste-playable clean && npm run bundle:playable",
     "test:node": "node src/e2e/node.js",
-    "test:unit": "jest",
+    "test:unit": "jest -c=dev-env/tests/jest/configs/unit.config.js",
     "pretest:playback": "haste-playable clean && npm run bundle:playback-test && npm run bundle:playback-test-with-adapters",
-    "test:playback": "haste-playable test --karma dev-env/karma.conf.js && haste-playable test --karma dev-env/karma-with-adapters.conf.js",
+    "test:playback": "haste-playable test --karma dev-env/tests/karma/karma.conf.js && haste-playable test --karma dev-env/karma-with-adapters.conf.js",
     "precommit": "lint-staged && npm run documentation:gitadd",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
