--- a/src/e2e/tsconfig.json
+++ b/src/e2e/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "types": ["mocha"]
+    "types": ["mocha", "node"]
   },
-  "include": ["./*.ts"]
+  "include": ["./*.ts", "../typings/internals.d.ts"]
 }
