--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "csscomb:all": "csscomb src/.",
     "pretest:node": "haste-playable clean && npm run bundle:playable",
     "test:node": "node src/e2e/node.js",
-    "test:unit": "jest -c=dev-env/tests/jest/configs/unit.config.js --detectOpenHandles",
+    "test:unit": "jest -c=dev-env/tests/jest/configs/unit.config.js --runInBand",
     "pretest:playback": "haste-playable clean && npm run bundle:playback-test && npm run bundle:playback-test-with-adapters",
     "test:playback": "haste-playable test --karma dev-env/tests/karma/karma.conf.js && haste-playable test --karma dev-env/karma-with-adapters.conf.js",
     "precommit": "lint-staged && npm run documentation:gitadd",
