chore(types): fixing types for chromecast module

--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "classnames": "^2.2.6",
     "dashjs": "^2.9.2",
     "eventemitter3": "^3.1.0",
-    "hls.js": "^0.12.4",
+    "hls.js": "^0.13.1",
     "resize-observer-polyfill": "^1.5.0",
     "tslib": "^1.9.3"
   },
@@ -82,8 +82,8 @@
     "@storybook/theming": "latest",
     "@types/chai": "^4.1.7",
     "@types/chance": "^1.0.1",
-    "@types/chrome": "0.0.81",
-    "@types/chromecast-caf-sender": "^1.0.1",
+    "@types/chrome": "^0.0.92",
+    "@types/chromecast-caf-sender": "^1.0.3",
     "@types/classnames": "^2.2.7",
     "@types/hls.js": "^0.10.2",
     "@types/mocha": "^5.2.5",
