--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,7 @@ addons:
 script:
   - npm run lint
   - npm run build
-  - npm run test:unit
-  - npm run test:playback
+  - npm run test
 
 notifications:
   slack:
