--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "dist",
     "src"
   ],
-  "main": "dist/statics/playable.bundle.js",
+  "main": "dist/src/index.js",
   "types": "dist/src/index.d.ts",
   "scripts": {
     "start": "haste-playable start",
