--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "classnames": "^2.2.6",
     "dashjs": "^3.2.0",
     "eventemitter3": "^4.0.7",
-    "hls.js": "^0.14.17",
+    "hls.js": "^1.4.12",
     "resize-observer-polyfill": "^1.5.0",
     "tslib": "^2.1.0"
   },
@@ -143,5 +143,6 @@
       "csscomb -tty-mode --",
       "git add"
     ]
-  }
+  },
+  "packageManager": "yarn@1.22.19"
 }
