--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "classnames": "^2.2.6",
     "dashjs": "^3.2.0",
     "eventemitter3": "^4.0.7",
-    "hls.js": "^1.4.12",
+    "hls.js": "1.3.5",
     "resize-observer-polyfill": "^1.5.0",
     "tslib": "^2.1.0"
   },
